syntax = "proto3";

package warp.multi_agent.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/descriptor.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "citations.proto";
import "input_context.proto";
import "attachment.proto";
import "file_content.proto";
import "document_content.proto";
import "options.proto";
import "todo.proto";

option go_package = "kiro-go/internal/warp/pb";

enum ToolType {
    RUN_SHELL_COMMAND = 0;
    SEARCH_CODEBASE = 1;
    READ_FILES = 2;
    APPLY_FILE_DIFFS = 3;
    SUGGEST_PLAN = 4;
    SUGGEST_CREATE_PLAN = 5;
    GREP = 6;
    FILE_GLOB = 7;
    READ_MCP_RESOURCE = 8;
    CALL_MCP_TOOL = 9;
    WRITE_TO_LONG_RUNNING_SHELL_COMMAND = 10;
    SUGGEST_NEW_CONVERSATION = 11;
    FILE_GLOB_V2 = 12;
    SUGGEST_PROMPT = 13;
    OPEN_CODE_REVIEW = 14;
    INIT_PROJECT = 15;
    SUBAGENT = 16;
    READ_DOCUMENTS = 17;
    EDIT_DOCUMENTS = 18;
    CREATE_DOCUMENTS = 19;
    READ_SHELL_COMMAND_OUTPUT = 20;
    USE_COMPUTER = 21;
    INSERT_REVIEW_COMMENTS = 22;
    READ_SKILL = 23;
    REQUEST_COMPUTER_USE = 24;
}

enum AgentType {
    AGENT_TYPE_UNKNOWN = 0;
    AGENT_TYPE_PRIMARY = 1;
    AGENT_TYPE_CLI = 2;
}

message Task {
    message Dependencies {
        string parent_task_id = 1;
    }

    string id = 1;
    string description = 2;
    Dependencies dependencies = 3;
    repeated Message messages = 5;
    string summary = 6;
    string server_data = 8;
}

message ReviewComments {
    repeated ReviewComment pending_comments = 1;
    repeated ReviewComment completed_comments = 2;
    DiffSet diff_set = 3;
}

message ReviewComment {
    message CommentedFile {
        string file_path = 1;
        CurrentRef current = 2;
        BaseRef base = 3;
    }

    message CommentedDiffset {
        CurrentRef current = 1;
        BaseRef base = 2;
    }

    string id = 1;
    string comment = 2;
    oneof comment_target {
        DiffHunk commented_line = 3;
        CommentedFile commented_file = 4;
        CommentedDiffset commented_diffset = 5;
    }
}

message Message {
    message UserQuery {
        message ReferencedAttachmentsEntry {
            string key = 1;
            Attachment value = 2;
        }

        string query = 1;
        InputContext context = 2;
        repeated ReferencedAttachmentsEntry referenced_attachments = 3;
        UserQueryMode mode = 4;
        AgentType intended_agent = 5;
    }

    message SystemQuery {
        InputContext context = 2;
        oneof type {
            AutoCodeDiff auto_code_diff = 1;
            ResumeConversation resume_conversation = 3;
            TriggerSuggestPrompt trigger_suggest_prompt = 4;
            CreateNewProject create_new_project = 5;
            CloneRepository clone_repository = 6;
            SummarizeConversation summarize_conversation = 7;
            FetchReviewComments fetch_review_comments = 8;
        }
    }

    message AutoCodeDiff {
        string query = 1;
    }

    message ResumeConversation {
    }

    message TriggerSuggestPrompt {
        repeated Attachment attachments = 1;
        oneof trigger {
            google.protobuf.Empty files_changed = 2;
            google.protobuf.Empty command_run = 3;
        }
    }

    message CreateNewProject {
        string query = 1;
    }

    message CloneRepository {
        string url = 1;
    }

    message SummarizeConversation {
        string prompt = 1;
    }

    message AgentOutput {
        string text = 1;
    }

    message AgentReasoning {
        string reasoning = 1;
        google.protobuf.Duration finished_duration = 2;
    }

    message Summarization {
        message ConversationSummary {
            string summary = 1;
            int32 token_count = 2;
        }

        message ToolCallResultSummary {
        }

        google.protobuf.Duration finished_duration = 2;
        oneof summary_type {
            ConversationSummary conversation_summary = 1;
            ToolCallResultSummary tool_call_result_summary = 3;
        }
    }

    message CodeReview {
        ReviewComments comments = 1;
    }

    message FetchReviewComments {
        string repo_path = 1;
    }

    message ToolCall {
        message Server {
            string payload = 1;
        }

        message RunShellCommand {
            string command = 1;
            bool is_read_only = 2;
            bool uses_pager = 3;
            repeated Citation citations = 4;
            bool is_risky = 5;
            oneof wait_until_complete_value {
                bool wait_until_complete = 6;
            }
        }

        message WriteToLongRunningShellCommand {
            message Mode {
                oneof mode {
                    google.protobuf.Empty raw = 1;
                    google.protobuf.Empty line = 2;
                    google.protobuf.Empty block = 3;
                }
            }

            bytes input = 1;
            Mode mode = 2;
            string command_id = 3;
        }

        message SuggestNewConversation {
            string message_id = 1;
        }

        message ReadFiles {
            message File {
                string name = 1;
                repeated FileContentLineRange line_ranges = 2;
            }

            repeated File files = 1;
        }

        message SearchCodebase {
            string query = 1;
            repeated string path_filters = 2;
            string codebase_path = 3;
        }

        message ApplyFileDiffs {
            message FileDiff {
                string file_path = 1;
                string search = 2;
                string replace = 3;
            }

            message V4AFileUpdate {
                message Hunk {
                    repeated string change_context = 1;
                    string pre_context = 2;
                    string old = 3;
                    string new = 4;
                    string post_context = 5;
                }

                string file_path = 1;
                string move_to = 2;
                repeated Hunk hunks = 3;
            }

            message NewFile {
                string file_path = 1;
                string content = 2;
            }

            message DeleteFile {
                string file_path = 1;
            }

            string summary = 1;
            repeated FileDiff diffs = 2;
            repeated NewFile new_files = 3;
            repeated DeleteFile deleted_files = 4;
            repeated V4AFileUpdate v4a_updates = 5;
        }

        message SuggestPlan {
            string summary = 1;
            repeated Task proposed_tasks = 2;
        }

        message SuggestCreatePlan {
        }

        message Grep {
            repeated string queries = 1;
            string path = 2;
        }

        message FileGlob {
            repeated string patterns = 1;
            string path = 2;
        }

        message FileGlobV2 {
            repeated string patterns = 1;
            string search_dir = 2;
            int32 max_matches = 3;
            int32 max_depth = 4;
            int32 min_depth = 5;
        }

        message ReadMCPResource {
            string uri = 1;
            string server_id = 2;
        }

        message CallMCPTool {
            string name = 1;
            google.protobuf.Struct args = 2;
            string server_id = 3;
        }

        message SuggestPrompt {
            message InlineQueryBanner {
                string title = 1;
                string description = 2;
                string query = 3;
            }

            oneof display_mode {
                InlineQueryBanner inline_query_banner = 1;
            }
        }

        message OpenCodeReview {
        }

        message InitProject {
        }

        message Subagent {
            message CLISubagent {
                string command_id = 1;
            }

            string task_id = 1;
            string payload = 2;
            oneof metadata {
                CLISubagent cli = 3;
                google.protobuf.Empty research = 4;
                google.protobuf.Empty advice = 5;
                google.protobuf.Empty computer_use = 6;
                google.protobuf.Empty summarization = 7;
            }
        }

        message ReadDocuments {
            message Document {
                string document_id = 1;
                repeated FileContentLineRange line_ranges = 2;
            }

            repeated Document documents = 1;
        }

        message EditDocuments {
            message DocumentDiff {
                string document_id = 1;
                string search = 2;
                string replace = 3;
            }

            repeated DocumentDiff diffs = 1;
        }

        message CreateDocuments {
            message NewDocument {
                string content = 1;
                string title = 2;
            }

            repeated NewDocument new_documents = 1;
        }

        message ReadShellCommandOutput {
            string command_id = 1;
            oneof delay {
                google.protobuf.Duration duration = 2;
                google.protobuf.Empty on_completion = 3;
            }
        }

        message InsertReviewComments {
            message Comment {
                string comment_id = 1;
                string author = 2;
                string last_modified_timestamp = 3;
                string comment_body = 4;
                string parent_comment_id = 5;
                CommentLocation location = 6;
            }

            message CommentLocation {
                string file_path = 1;
                CommentLineRange line = 2;
            }

            message CommentLineRange {
                string diff_hunk = 1;
                FileContentLineRange range = 2;
            }

            string repo_path = 1;
            repeated Comment comments = 2;
        }

        message ReadSkill {
            string skill_path = 1;
            string skill_name = 2;
        }

        message UseComputer {
            message Action {
                enum MouseButton {
                    LEFT = 0;
                    RIGHT = 1;
                    MIDDLE = 2;
                    BACK = 3;
                    FORWARD = 4;
                }

                message MouseMove {
                    Coordinates to = 1;
                }

                message MouseDown {
                    MouseButton button = 1;
                    Coordinates at = 2;
                }

                message MouseUp {
                    MouseButton button = 1;
                }

                message MouseWheel {
                    enum Direction {
                        UP = 0;
                        DOWN = 1;
                        LEFT = 2;
                        RIGHT = 3;
                    }

                    Coordinates at = 1;
                    Direction direction = 2;
                    oneof distance {
                        int32 pixels = 3;
                        int32 clicks = 4;
                    }
                }

                message Wait {
                    google.protobuf.Duration duration = 1;
                }

                message TypeText {
                    string text = 1;
                }

                message Key {
                    oneof data {
                        int32 keycode = 1;
                        string char = 2;
                    }
                }

                message KeyDown {
                    Key key = 1;
                }

                message KeyUp {
                    Key key = 2;
                }

                oneof type {
                    MouseMove mouse_move = 1;
                    MouseDown mouse_down = 2;
                    MouseUp mouse_up = 3;
                    MouseWheel mouse_wheel = 4;
                    Wait wait = 5;
                    TypeText type_text = 6;
                    KeyDown key_down = 7;
                    KeyUp key_up = 8;
                }
            }

            repeated Action actions = 1;
            ScreenshotParams post_actions_screenshot_params = 2;
            string action_summary = 3;
        }

        message RequestComputerUse {
            string task_summary = 1;
            ScreenshotParams screenshot_params = 2;
        }

        message ScreenshotParams {
            int32 max_long_edge_px = 1;
            int32 max_total_px = 2;
        }

        string tool_call_id = 1;
        oneof tool {
            RunShellCommand run_shell_command = 2;
            SearchCodebase search_codebase = 3;
            Server server = 4;
            ReadFiles read_files = 5;
            ApplyFileDiffs apply_file_diffs = 6;
            SuggestPlan suggest_plan = 7;
            SuggestCreatePlan suggest_create_plan = 8;
            Grep grep = 9;
            FileGlob file_glob = 10;
            ReadMCPResource read_mcp_resource = 11;
            CallMCPTool call_mcp_tool = 12;
            WriteToLongRunningShellCommand write_to_long_running_shell_command = 13;
            SuggestNewConversation suggest_new_conversation = 14;
            FileGlobV2 file_glob_v2 = 15;
            SuggestPrompt suggest_prompt = 16;
            OpenCodeReview open_code_review = 17;
            InitProject init_project = 18;
            Subagent subagent = 19;
            ReadDocuments read_documents = 20;
            EditDocuments edit_documents = 21;
            CreateDocuments create_documents = 22;
            ReadShellCommandOutput read_shell_command_output = 23;
            UseComputer use_computer = 24;
            InsertReviewComments insert_review_comments = 25;
            ReadSkill read_skill = 26;
            RequestComputerUse request_computer_use = 27;
        }
    }

    message ToolCallResult {
        message ServerResult {
            string serialized_result = 1;
        }

        message SubagentResult {
            string payload = 1;
        }

        string tool_call_id = 1;
        InputContext context = 11;
        oneof result {
            RunShellCommandResult run_shell_command = 2;
            SearchCodebaseResult search_codebase = 3;
            ServerResult server = 4;
            ReadFilesResult read_files = 5;
            ApplyFileDiffsResult apply_file_diffs = 6;
            SuggestPlanResult suggest_plan = 7;
            SuggestCreatePlanResult suggest_create_plan = 8;
            GrepResult grep = 9;
            FileGlobResult file_glob = 10;
            google.protobuf.Empty cancel = 14;
            ReadMCPResourceResult read_mcp_resource = 15;
            CallMCPToolResult call_mcp_tool = 16;
            WriteToLongRunningShellCommandResult write_to_long_running_shell_command = 17;
            SuggestNewConversationResult suggest_new_conversation = 18;
            FileGlobV2Result file_glob_v2 = 19;
            SuggestPromptResult suggest_prompt = 20;
            OpenCodeReviewResult open_code_review = 21;
            InitProjectResult init_project = 22;
            SubagentResult subagent = 23;
            ReadDocumentsResult read_documents = 24;
            EditDocumentsResult edit_documents = 25;
            CreateDocumentsResult create_documents = 26;
            ReadShellCommandOutputResult read_shell_command_output = 27;
            UseComputerResult use_computer = 28;
            InsertReviewCommentsResult insert_review_comments = 29;
            ReadSkillResult read_skill = 30;
            RequestComputerUseResult request_computer_use_result = 31;
        }
    }

    message ServerEvent {
        string payload = 1;
    }

    message UpdateTodos {
        oneof operation {
            CreateTodoList create_todo_list = 1;
            UpdatePendingTodos update_pending_todos = 2;
            MarkTodosCompleted mark_todos_completed = 3;
        }
    }

    message UpdateReviewComments {
        message AddressReviewComments {
            repeated string comment_ids = 1;
        }

        oneof operation {
            AddressReviewComments address_review_comments = 1;
        }
    }

    message WebSearch {
        message Status {
            message Searching {
                string query = 1;
            }

            message Success {
                message SearchedPage {
                    string url = 1;
                    string title = 2;
                }

                string query = 1;
                repeated SearchedPage pages = 2;
            }

            oneof type {
                Searching searching = 1;
                Success success = 2;
                google.protobuf.Empty error = 3;
            }
        }

        Status status = 1;
    }

    message WebFetch {
        message Status {
            message Fetching {
                repeated string urls = 1;
            }

            message Success {
                message FetchedPage {
                    string url = 1;
                    string title = 2;
                    bool success = 3;
                }

                repeated FetchedPage pages = 1;
            }

            oneof type {
                Fetching fetching = 1;
                Success success = 2;
                google.protobuf.Empty error = 3;
            }
        }

        Status status = 1;
    }

    message DebugOutput {
        string text = 1;
    }

    string id = 1;
    string task_id = 11;
    string request_id = 13;
    google.protobuf.Timestamp timestamp = 14;
    string server_message_data = 7;
    repeated Citation citations = 8;
    oneof message {
        UserQuery user_query = 2;
        AgentOutput agent_output = 3;
        ToolCall tool_call = 4;
        ToolCallResult tool_call_result = 5;
        ServerEvent server_event = 6;
        SystemQuery system_query = 9;
        UpdateTodos update_todos = 10;
        AgentReasoning agent_reasoning = 15;
        Summarization summarization = 16;
        CodeReview code_review = 17;
        UpdateReviewComments update_review_comments = 18;
        WebSearch web_search = 19;
        WebFetch web_fetch = 20;
        DebugOutput debug_output = 21;
    }
}

message RunShellCommandResult {
    string command = 3;
    string output = 1;
    int32 exit_code = 2;
    oneof result {
        LongRunningShellCommandSnapshot long_running_command_snapshot = 4;
        ShellCommandFinished command_finished = 5;
        PermissionDenied permission_denied = 6;
    }
}

message ReadFilesResult {
    message TextFilesSuccess {
        repeated FileContent files = 1;
    }

    message AnyFilesSuccess {
        repeated AnyFileContent files = 1;
    }

    message Error {
        string message = 1;
    }

    oneof result {
        TextFilesSuccess text_files_success = 1;
        AnyFilesSuccess any_files_success = 3;
        Error error = 2;
    }
}

message SearchCodebaseResult {
    message Success {
        repeated FileContent files = 1;
    }

    message Error {
        string message = 1;
    }

    oneof result {
        Success success = 1;
        Error error = 2;
    }
}

message ApplyFileDiffsResult {
    message Success {
        message UpdatedFileContent {
            FileContent file = 1;
            bool was_edited_by_user = 2;
        }

        message DeletedFile {
            string file_path = 1;
        }

        repeated FileContent updated_files = 1;
        repeated UpdatedFileContent updated_files_v2 = 2;
        repeated DeletedFile deleted_files = 3;
    }

    message Error {
        string message = 1;
    }

    oneof result {
        Success success = 1;
        Error error = 2;
    }
}

message SuggestCreatePlanResult {
    bool accepted = 1;
}

message SuggestPlanResult {
    message UserEditedPlan {
        string plan_text = 1;
    }

    oneof result {
        google.protobuf.Empty accepted = 1;
        UserEditedPlan user_edited_plan = 2;
    }
}

message GrepResult {
    message Success {
        message GrepFileMatch {
            message GrepLineMatch {
                uint32 line_number = 1;
            }

            string file_path = 1;
            repeated GrepLineMatch matched_lines = 2;
        }

        repeated GrepFileMatch matched_files = 1;
    }

    message Error {
        string message = 1;
    }

    oneof result {
        Success success = 1;
        Error error = 2;
    }
}

message FileGlobResult {
    message Success {
        string matched_files = 1;
    }

    message Error {
        string message = 1;
    }

    oneof result {
        Success success = 1;
        Error error = 2;
    }
}

message FileGlobV2Result {
    message Success {
        message FileGlobMatch {
            string file_path = 1;
        }

        repeated FileGlobMatch matched_files = 1;
        string warnings = 2;
    }

    message Error {
        string message = 1;
    }

    oneof result {
        Success success = 1;
        Error error = 2;
    }
}

message MCPResourceContent {
    message Text {
        string content = 1;
        string mime_type = 2;
    }

    message Binary {
        bytes data = 1;
        string mime_type = 2;
    }

    string uri = 1;
    oneof content_type {
        Text text = 2;
        Binary binary = 3;
    }
}

message ReadMCPResourceResult {
    message Success {
        repeated MCPResourceContent contents = 1;
    }

    message Error {
        string message = 1;
    }

    oneof result {
        Success success = 1;
        Error error = 2;
    }
}

message WriteToLongRunningShellCommandResult {
    oneof result {
        LongRunningShellCommandSnapshot long_running_command_snapshot = 1;
        ShellCommandFinished command_finished = 2;
        ShellCommandError error = 3;
    }
}

message SuggestNewConversationResult {
    message Accepted {
        string message_id = 1;
    }

    message Rejected {
    }

    oneof result {
        Accepted accepted = 1;
        Rejected rejected = 2;
    }
}

message ShellCommandFinished {
    string output = 1;
    int32 exit_code = 2;
    string command_id = 3;
}

message PermissionDenied {
    oneof reason {
        google.protobuf.Empty denylisted_command = 1;
    }
}

message CallMCPToolResult {
    message Success {
        message Result {
            message Text {
                string text = 1;
            }

            message Image {
                bytes data = 1;
                string mime_type = 2;
            }

            oneof result {
                Text text = 1;
                Image image = 2;
                MCPResourceContent resource = 3;
            }
        }

        repeated Result results = 1;
    }

    message Error {
        string message = 1;
    }

    oneof result {
        Success success = 1;
        Error error = 2;
    }
}

message SuggestPromptResult {
    oneof result {
        google.protobuf.Empty accepted = 1;
        google.protobuf.Empty rejected = 2;
    }
}

message OpenCodeReviewResult {
}

message InitProjectResult {
}

message ReadDocumentsResult {
    message Success {
        repeated DocumentContent documents = 1;
    }

    message Error {
        string message = 1;
    }

    oneof result {
        Success success = 1;
        Error error = 2;
    }
}

message EditDocumentsResult {
    message Success {
        repeated DocumentContent updated_documents = 1;
    }

    message Error {
        string message = 1;
    }

    oneof result {
        Success success = 1;
        Error error = 2;
    }
}

message CreateDocumentsResult {
    message Success {
        repeated DocumentContent created_documents = 1;
    }

    message Error {
        string message = 1;
    }

    oneof result {
        Success success = 1;
        Error error = 2;
    }
}

message ReadShellCommandOutputResult {
    string command = 1;
    oneof result {
        LongRunningShellCommandSnapshot long_running_command_snapshot = 2;
        ShellCommandFinished command_finished = 3;
        ShellCommandError error = 4;
    }
}

message InsertReviewCommentsResult {
    message Success {
    }

    message Error {
        string message = 1;
    }

    string repo_path = 1;
    oneof result {
        Success success = 2;
        Error error = 3;
    }
}

message Coordinates {
    int32 x = 1;
    int32 y = 2;
}

message UseComputerResult {
    message Success {
        RawImage screenshot = 1;
        Coordinates cursor_position = 2;
    }

    message Error {
        string message = 1;
    }

    oneof result {
        Success success = 1;
        Error error = 2;
    }
}

message ReadSkillResult {
    message Success {
        FileContent content = 1;
    }

    message Error {
        string message = 1;
    }

    oneof result {
        Success success = 1;
        Error error = 2;
    }
}

message ScreenDimensions {
    int32 width_px = 1;
    int32 height_px = 2;
}

message RequestComputerUseResult {
    message Approved {
        enum Platform {
            MACOS = 0;
            WINDOWS = 1;
            LINUX_X11 = 2;
        }

        ScreenDimensions screen_dimensions = 1;
        RawImage initial_screenshot = 2;
        Platform platform = 3;
    }

    message Rejected {
    }

    message Error {
        string message = 1;
    }

    oneof result {
        Approved approved = 1;
        Rejected rejected = 2;
        Error error = 3;
    }
}

message ShellCommandError {
    oneof type {
        google.protobuf.Empty command_not_found = 1;
    }
}

message UserQueryMode {
    oneof type {
        google.protobuf.Empty plan = 1;
    }
}

message RawImage {
    bytes data = 1;
    string mime_type = 2;
}
